[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://ui/TutorialUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://environ/tutorial/TutorialWater.gd" type="Script" id=5]
[ext_resource path="res://environ/tutorial/TutorialWait.gd" type="Script" id=6]
[ext_resource path="res://environ/tutorial/TutorialHarvest.gd" type="Script" id=7]
[ext_resource path="res://scenes/TutorialWilt.gd" type="Script" id=8]
[ext_resource path="res://environ/tutorial/TutorialWeed.gd" type="Script" id=9]
[ext_resource path="res://environ/tutorial/TutorialEater.gd" type="Script" id=10]
[ext_resource path="res://environ/tutorial/TutorialStep.gd" type="Script" id=11]

[node name="Tutorial" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -131076, 1, 0, -196605, 1, 0, -196601, 1, 0, -65540, 1, 0, -131069, 1, 0, -131065, 1, 0, -4, 1, 0, -65533, 1, 0, -65529, 1, 0, 65505, 0, 0, 65506, 0, 0, 65507, 0, 0, 65508, 0, 0, 65509, 0, 0, 65510, 0, 0, 65511, 0, 0, 65512, 0, 0, 65513, 0, 0, 65514, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 131041, 0, 65536, 131042, 0, 65536, 131043, 0, 65536, 131044, 0, 65536, 131045, 0, 65536, 131046, 0, 65536, 131047, 0, 65536, 131048, 0, 65536, 131049, 0, 65536, 131050, 0, 65536, 131051, 0, 65536, 131052, 0, 65536, 131053, 0, 65536, 131054, 0, 65536, 131055, 0, 65536, 131056, 0, 65536, 131057, 0, 65536, 131058, 0, 65536, 131059, 0, 65536, 131060, 0, 65536, 131061, 0, 65536, 131062, 0, 65536, 131063, 0, 65536, 131064, 0, 65536, 131065, 0, 65536, 131066, 0, 65536, 131067, 0, 65536, 131068, 0, 65536, 131069, 0, 65536, 131070, 0, 65536, 131071, 0, 65536, 65536, 0, 65536, 65537, 0, 65536, 65538, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 65543, 0, 65536, 65544, 0, 65536, 65545, 0, 65536, 65546, 0, 65536, 65547, 0, 65536, 65548, 0, 65536, 65549, 0, 65536, 65550, 0, 65536, 65551, 0, 65536, 65552, 0, 65536, 65553, 0, 65536, 65554, 0, 65536, 65555, 0, 65536, 65556, 0, 65536, 65557, 0, 65536, 65558, 0, 65536, 65559, 0, 65536, 65560, 0, 65536, 65561, 0, 65536, 65562, 0, 65536, 65563, 0, 65536, 196577, 0, 65536, 196578, 0, 65536, 196579, 0, 65536, 196580, 0, 65536, 196581, 0, 65536, 196582, 0, 65536, 196583, 0, 65536, 196584, 0, 65536, 196585, 0, 65536, 196586, 0, 65536, 196587, 0, 65536, 196588, 0, 65536, 196589, 0, 65536, 196590, 0, 65536, 196591, 0, 65536, 196592, 0, 65536, 196593, 0, 65536, 196594, 0, 65536, 196595, 0, 65536, 196596, 0, 65536, 196597, 0, 65536, 196598, 0, 65536, 196599, 0, 65536, 196600, 0, 65536, 196601, 0, 65536, 196602, 0, 65536, 196603, 0, 65536, 196604, 0, 65536, 196605, 0, 65536, 196606, 0, 65536, 196607, 0, 65536, 131072, 0, 65536, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 131079, 0, 65536, 131080, 0, 65536, 131081, 0, 65536, 131082, 0, 65536, 131083, 0, 65536, 131084, 0, 65536, 131085, 0, 65536, 131086, 0, 65536, 131087, 0, 65536, 131088, 0, 65536, 131089, 0, 65536, 131090, 0, 65536, 131091, 0, 65536, 131092, 0, 65536, 131093, 0, 65536, 131094, 0, 65536, 131095, 0, 65536, 131096, 0, 65536, 131097, 0, 65536, 131098, 0, 65536, 131099, 0, 65536 )

[node name="Alien" parent="." index="1"]
position = Vector2( -45, 0 )

[node name="WaterPlant1" type="Position2D" parent="Plants" index="0"]
position = Vector2( 37, 0 )

[node name="WiltPlant" type="Position2D" parent="Plants" index="1"]
position = Vector2( 111, 0 )

[node name="WeedPlant" type="Position2D" parent="Plants" index="2"]
position = Vector2( -40, 0 )

[node name="EaterPlant" type="Position2D" parent="Plants" index="3"]
position = Vector2( 90, 0 )

[node name="EaterPlantPrey" type="Position2D" parent="Plants" index="4"]
position = Vector2( 123, 0 )

[node name="TutorialDelay" type="Timer" parent="." index="6"]
one_shot = true

[node name="PlantSpawner" parent="." index="7"]
active = false

[node name="Steps" type="Node" parent="." index="8"]

[node name="Water" type="Node" parent="Steps" index="0"]
script = ExtResource( 5 )
text = "Welcome to [game]! Begin by watering plants that have the [img]res://resources/textures/texture_water.tres[/img] icon!
(Hold SPACE near them)"
time_before_next = 0.0

[node name="Wait" type="Node" parent="Steps" index="1"]
script = ExtResource( 6 )
text = "Once watered, it will take a few seconds to grow."

[node name="Harvest" type="Node" parent="Steps" index="2"]
script = ExtResource( 7 )
text = "Harvest plants with the [img]res://resources/textures/texture_point.tres[/img] icon. They will give you points!"

[node name="Wilt" type="Node" parent="Steps" index="3"]
script = ExtResource( 8 )
text = "[color=#b00b0b]Be careful![/color] If you ignore a plant for too long, it will decay!"
time_before_cleanup = 2.0

[node name="PlantWeed" type="Node" parent="Steps" index="4"]
script = ExtResource( 9 )
text = "[color=#b00b0b]Watch out![/color] Green plants are weeds and will make other plants grow slower and decay faster.
Uproot them by holding SPACE nearby!"

[node name="PlantEater" type="Node" parent="Steps" index="5"]
script = ExtResource( 10 )
text = "[color=#b00b0b]Watch out![/color] Red plants eat other plants when they grow!
You can also uproot those."

[node name="End" type="Node" parent="Steps" index="6"]
script = ExtResource( 11 )
text = "You're all set to go. See how many points you can get in 60 seconds!"

[node name="TutorialUI" parent="GameUI" index="1" instance=ExtResource( 3 )]
